fix: header bug on safari

--- a/src/summersplash2022/index.module.css
+++ b/src/summersplash2022/index.module.css
@@ -105,6 +105,10 @@
   padding-top: 0%;
 }
 
+.header {
+  height: 80px;
+}
+
 .section1H3 {
   font-family: 'Recoleta';
   font-style: normal;
